# python-pants-monorepo

./: .dir-locals.el  .gitignore  README.org  pants.ci.toml  pants.toml  set_pythonpath.sh
.github/workflows/: build_prod.yaml  build_rc.yaml  test.yaml
app1/: BUILD  Dockerfile  README.org  pyproject.toml
app1/app1/: BUILD  app.py
app1/tests/: test_app1.py
app2/: BUILD  Dockerfile  README.org  pyproject.toml
app2/app2/: BUILD  app.py
app2/tests/: BUILD  test_app2.py
lib1/: BUILD  README.org  pyproject.toml
lib1/lib1/: BUILD  greet.py
lib1/tests/: BUILD  test_lib1.py
lib2/: BUILD  README.org  pyproject.toml
lib2/lib2/: BUILD  main.py
lib2/tests/: BUILD  test_main.py
