[tool.poetry]
name = "lib1-monorepo"
version = "0.1.5"
description = ""
authors = ["Diego Rodriguez Mancini <diegorodriguezmancini@gmail.com>"]
packages = [
  { include = "lib1" }
]

[tool.poetry.dependencies]
python = "^3.8"
ansicolors = "1.1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
